[feat] 增加虚假的天气查询功能

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -48,6 +48,7 @@
     <string name="my_item_favourites">收藏</string>
     <string name="my_item_sms">朋友圈</string>
     <string name="my_item_video">视频</string>
+    <string name="my_item_weather">天气</string>
     <string name="my_item_card">卡包</string>
     <string name="my_item_sticker">表情</string>
 </resources>
